<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"

    tools:context=".activity.Login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome!!"
        android:fontFamily="cursive"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="50sp"/>

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="822dp"
        android:layout_height="234dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/mobiletwo" />

    <EditText
        android:drawableLeft="@drawable/username"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User Name"

        android:layout_marginTop="25dp"
        android:textSize="30sp"/>
    <EditText
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginTop="20dp"
        android:textSize="30sp"/>
    <Button

        android:id="@+id/btnLogin"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="30dp"/>

    <TextView

        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="If not register? Register Here!"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/displaylogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/facebook"
            android:layout_width="48dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/insta"
            android:layout_width="54dp"
            android:layout_height="82dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:src="@drawable/insta" />

    </LinearLayout>





</LinearLayout>

