<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activity.SignUp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgsheela"
        android:layout_width="382dp"
        android:layout_height="116dp"

        android:src="@drawable/ic_person_black_24dp" />

    <EditText
        android:drawableLeft="@drawable/username"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:id="@+id/etfirstName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:hint="First Name"/>
    <EditText
        android:drawableLeft="@drawable/username"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:id="@+id/etlastName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:hint="Last Name"/>

    <EditText
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:id="@+id/etPhoneNo"
          android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:hint="Phone Number"/>
    <EditText
        android:drawableLeft="@drawable/username"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:id="@+id/etUserName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User Name"
        android:layout_marginTop="20dp"
        android:textSize="30sp"/>
    <EditText
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:hint="Password"/>
    <EditText
       android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="Confirm Password"/>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="244dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"

        android:text="Sign Up"
        android:textSize="30dp" />


</LinearLayout>